@@ -24,7 +24,6 @@ import java.io.Closeable;
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
 import java.util.ArrayDeque;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
@@ -508,40 +507,39 @@ public class Overseer implements SolrCloseable {
       if (collectionAction != null) {
         switch (collectionAction) {
           case CREATE:
-            return Collections.singletonList(
+            return List.of(
                 new ClusterStateMutator(getSolrCloudManager())
                     .createCollection(clusterState, message));
           case DELETE:
-            return Collections.singletonList(
+            return List.of(
                 new ClusterStateMutator(getSolrCloudManager())
                     .deleteCollection(clusterState, message));
           case CREATESHARD:
-            return Collections.singletonList(
+            return List.of(
                 new CollectionMutator(getSolrCloudManager()).createShard(clusterState, message));
           case DELETESHARD:
-            return Collections.singletonList(
+            return List.of(
                 new CollectionMutator(getSolrCloudManager()).deleteShard(clusterState, message));
           case ADDREPLICA:
-            return Collections.singletonList(
+            return List.of(
                 new SliceMutator(getSolrCloudManager()).addReplica(clusterState, message));
           case ADDREPLICAPROP:
-            return Collections.singletonList(
+            return List.of(
                 new ReplicaMutator(getSolrCloudManager())
                     .addReplicaProperty(clusterState, message));
           case DELETEREPLICAPROP:
-            return Collections.singletonList(
+            return List.of(
                 new ReplicaMutator(getSolrCloudManager())
                     .deleteReplicaProperty(clusterState, message));
           case BALANCESHARDUNIQUE:
             ExclusiveSliceProperty dProp = new ExclusiveSliceProperty(clusterState, message);
             if (dProp.balanceProperty()) {
               String collName = message.getStr(ZkStateReader.COLLECTION_PROP);
-              return Collections.singletonList(
-                  new ZkWriteCommand(collName, dProp.getDocCollection()));
+              return List.of(new ZkWriteCommand(collName, dProp.getDocCollection()));
             }
             break;
           case MODIFYCOLLECTION:
-            return Collections.singletonList(
+            return List.of(
                 new CollectionMutator(getSolrCloudManager())
                     .modifyCollection(clusterState, message));
           default:
@@ -556,22 +554,22 @@ public class Overseer implements SolrCloseable {
         }
         switch (overseerAction) {
           case STATE:
-            return Collections.singletonList(
+            return List.of(
                 new ReplicaMutator(getSolrCloudManager()).setState(clusterState, message));
           case LEADER:
-            return Collections.singletonList(
+            return List.of(
                 new SliceMutator(getSolrCloudManager()).setShardLeader(clusterState, message));
           case DELETECORE:
-            return Collections.singletonList(
+            return List.of(
                 new SliceMutator(getSolrCloudManager()).removeReplica(clusterState, message));
           case ADDROUTINGRULE:
-            return Collections.singletonList(
+            return List.of(
                 new SliceMutator(getSolrCloudManager()).addRoutingRule(clusterState, message));
           case REMOVEROUTINGRULE:
-            return Collections.singletonList(
+            return List.of(
                 new SliceMutator(getSolrCloudManager()).removeRoutingRule(clusterState, message));
           case UPDATESHARDSTATE:
-            return Collections.singletonList(
+            return List.of(
                 new SliceMutator(getSolrCloudManager()).updateShardState(clusterState, message));
           case QUIT:
             if (myId.equals(message.get(ID))) {
@@ -592,7 +590,7 @@ public class Overseer implements SolrCloseable {
         }
       }
 
-      return Collections.singletonList(ZkStateWriter.NO_OP);
+      return List.of(ZkStateWriter.NO_OP);
     }
 
     private LeaderStatus amILeader() {
